@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>307</width>
+    <width>413</width>
     <height>185</height>
    </rect>
   </property>
@@ -91,6 +91,12 @@
        <widget class="QLabel" name="label">
         <property name="text">
          <string notr="true" comment="do not translate">Stem Direction</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+        <property name="indent">
+         <number>5</number>
         </property>
        </widget>
       </item>
